--- a/instituicao/componentes/side_menu/styles_side_menu.css
+++ b/instituicao/componentes/side_menu/styles_side_menu.css
@@ -4,17 +4,22 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
 .side_menu {
     font-family: 'Poppins', sans-serif;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
     color: #fff;
     background-color: #044177;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30vw;
-    height: 100%;
+    width: 20vw;
+    height: 100vh;
     position: fixed;
 }
 
@@ -29,7 +34,7 @@
 }
 
 #logo {
-    width: 200px;
+    width: 175px;
     align-self: center;
     margin-top: 75px;
 }
@@ -46,7 +51,7 @@
     display: flex;
     align-items: center;
     gap: 30px;
-    padding: 30px;
+    padding: 15px;
     margin-left: 10%;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -63,7 +68,7 @@
 
 .side_menu .links .item:hover {
     border: 2px solid #fff;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .side_menu .item:last-child {
@@ -74,14 +79,55 @@
     cursor: pointer;
 }
 
-@media (min-width: 1600px) {
+@media (max-height: 800px) {
 
-    .side_menu {
-        width: 370px;
+    #logo {
+        margin-top: 50px;
+        margin-bottom: 10px;
+    }
+
+    .side_menu .item {
+        gap: 20px;
+    }
+
+    .side_menu .links {
+        gap: 5px;
+    }
+
+}
+
+@media (max-width: 1024px) {
+
+    #logo {
+        width: 130px;
+    }
+
+    .side_menu p {
+        font-size: 13px;
     }
 }
 
-@media (max-width: 1559px) {
+@media (max-width: 768px) {
 
-    
+    #logo {
+        width: 60px;
+    }
+
+    /* .side_menu {
+        width: 25vw;
+    } */
+
+    .side_menu p {
+        display: none;
+    }
+
+    .side_menu .item {
+        margin-left: 0px;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .side_menu .item:last-child {
+        margin-bottom: 20px;
+    }
 }
