--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -18,7 +18,7 @@
 
 body {
     height: 100vh;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -32,14 +32,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #05204A;
+    color: #05204a;
     font-weight: 700;
 }
+
 .container input {
-    background-color: #E3E3E3;
+    background-color: #e3e3e3;
     border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
 }
 
 button {
@@ -63,7 +64,7 @@ button {
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
-    background-color: #0664B7;
+    background-color: #0664b7;
     border-radius: 30px;
     padding: 15px;
 }
@@ -73,9 +74,9 @@ button {
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
-    background-color: #0664B7;
+    background-color: #0664b7;
     border-radius: 30px;
-    padding: 15px
+    padding: 15px;
 }
 
 #terceiro_botao {
@@ -83,9 +84,9 @@ button {
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
-    background-color: #A71E34;
+    background-color: #a71e34;
     border-radius: 30px;
-    padding: 15px
+    padding: 15px;
 }
 
 .modal {
@@ -94,7 +95,7 @@ button {
     bottom: 0;
     left: 0;
     width: 40%;
-    height:35%;
+    height: 35%;
     padding: 2%;
     background-color: rgb(255, 255, 255);
     display: none;
@@ -102,21 +103,21 @@ button {
     flex-direction: column;
     text-align: center;
     justify-content: space-around;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     border-radius: 20px;
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 
 .modal h1 {
     font-size: 40px;
     font-weight: 700;
     text-align: center;
-    color: #05204A;
+    color: #05204a;
 }
 
 .modal h2 {
@@ -124,13 +125,13 @@ button {
     font-size: 25px;
     font-weight: 400;
     text-align: center;
-    color: #A71E34;
+    color: #a71e34;
 }
 
 .modal label {
     font-size: 30px;
     font-weight: 400;
-    color: #05204A;
+    color: #05204a;
 }
 
 .modal input {
@@ -154,7 +155,7 @@ button {
     border-radius: 30px;
     border: none;
     padding: 15px;
-    background-color: #C2C2C2;
+    background-color: #c2c2c2;
     margin-right: 5%;
 }
 
@@ -167,5 +168,19 @@ button {
     border-radius: 30px;
     font-weight: 700;
     border: none;
-    padding: 15px
+    padding: 15px;
+}
+
+.erro {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border: 4px solid #a71e34;
+    padding: 15px;
+}
+
+#p-senha-incorreta {
+    display: none;
+    justify-content: center;
+    margin-top: 16px;
+    color: #a71e34;
 }
