--- a/instituicao/turmas/vizualizacao_grupo/style.css
+++ b/instituicao/turmas/vizualizacao_grupo/style.css
@@ -9,10 +9,13 @@
         flex-direction: column;
         justify-content: space-between;
         height: 90vh;
-        max-width: 80%;
+        max-width: 80vw;
+        padding: 5%;
     }
     
     body {
+        height: 100vh;
+        width: 100vw;
         font-family: 'Poppins', sans-serif;
         color: #272727;
         display: flex;
@@ -23,12 +26,12 @@
     
     body h1 {
         margin-left: 2%;
-        font-size: 18px;
+        font-size: 25px;
         font-weight: 300;
     }
     
     body p {
-        font-size: 20px;
+        font-size: 30px;
         font-weight: 500;
     }
     
@@ -41,6 +44,8 @@
         flex-direction: row;
         list-style: none;
         text-align: center;
+        max-width: 80vw;
+        overflow-y: auto;
     }
     
     .li-integrantes {
@@ -48,14 +53,41 @@
         margin-right: 0.8%;
         flex-direction: column;
         justify-content: space-between;
+
     }
+
+    .cont-integrantes {
+        width: fit-content;
+        max-width: 100%;
+        height: fit-content;
+        border: 2px solid;
+        border-color: #05204A;
+        border-radius: 10px;
+        padding: 1%;
+    }   
+    
+    .ul-integrantes::-webkit-scrollbar {
+        width: 2px;
+        /* width of the entire scrollbar */
+    }
+    
+    .ul-integrantes::-webkit-scrollbar-thumb {
+        background-color: #e3e3e3;
+        /* color of the scroll thumb */
+        border-radius: 10px;
+        /* roundness of the scroll thumb */
+        border: none;
+        /* creates padding around scroll thumb */
+    }
+    
     
     .ul-orientadores {
         display: flex;
         margin-right: 0.8%;
         flex-direction: row;
         list-style: none;
-        text-align: center;
+        text-align: center;        
+        overflow-y: auto;
     }
     
     .li-orientadores {
@@ -63,4 +95,28 @@
         margin-right: 0.8%;
         flex-direction: column;
         justify-content: space-between;
+    }
+
+    .cont-orientadores {
+        width: fit-content;
+        max-width: 100%;
+        height: fit-content;
+        border: 2px solid;
+        border-color: #05204A;
+        border-radius: 10px;
+        padding: 1%;
+    }    
+
+    .ul-orientadores::-webkit-scrollbar {
+        width: 2px;
+        /* width of the entire scrollbar */
+    }
+    
+    .ul-orientadores::-webkit-scrollbar-thumb {
+        background-color: #e3e3e3;
+        /* color of the scroll thumb */
+        border-radius: 10px;
+        /* roundness of the scroll thumb */
+        border: none;
+        /* creates padding around scroll thumb */
     }
