--- a/professor/perfil/perfil.css
+++ b/professor/perfil/perfil.css
@@ -33,6 +33,17 @@ body {
     justify-content: space-around;
 }
 
+.container .profile-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+     margin-bottom: 10px;
+}
+
+.container .profile-pic-div {
+    justify-content: center;
+}
+
 .container h1 {
     font-size: 70px;
     display: flex;
