--- a/instituicao/usuarios/vizualizacao/style.css
+++ b/instituicao/usuarios/vizualizacao/style.css
@@ -4,20 +4,29 @@
     box-sizing: border-box;
 }
 
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-position: center center;
+    position: relative;
+}
+
 .space {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2%;
-    width: 100vh;
 }
 
 .container-geral {
+    padding: 2% 10%;
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .container {
@@ -25,37 +34,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 50vh;
+    height: 90vh;
     width: 100vw;
 }
 
-.addUsuario {
-    background-color: #044177;
-    border: none;
-    color: white;
-    padding: 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.buttonAddUsuario {
-    margin-top: 80vh;
-    margin-right: 2%;
-}
-
-.button5 {
-    border-radius: 50%;
-    margin-right: 3%;
-    margin-bottom: -35%;
-}
-
-.ul::-webkit-scrollbar {
+#ul::-webkit-scrollbar {
     width: 12px;
     /* width of the entire scrollbar */
 }
 
-.ul::-webkit-scrollbar-thumb {
+#ul::-webkit-scrollbar-thumb {
     background-color: #05204A;
     /* color of the scroll thumb */
     border-radius: 10px;
@@ -71,6 +59,15 @@
     padding: 15px
 }
 
+.usuarios_existentes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    font-size: 50px;
+    font-weight: 700;
+}
+
 .usuarios_existentes input {
     background-color: #E3E3E3;
     border-radius: 10px;
@@ -84,16 +81,15 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    margin-top: 2%;
 }
 
-.modal-excluir {
+#modal-excluir {
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 30vw;
-    height: 30vh;
+    width: 90vw;
+    height:40vh;
     background-color: rgb(255, 255, 255);
     display: none;
     align-items: center;
@@ -178,19 +174,9 @@ h1 {
     color: #05204A;
 }
 
-h2 {
-    font-size: 30px;
-    color: #05204A;
-}
-
-p {
-    font-size: 30px;
-    color: #05204A;
-}
-
-.ul {
+#ul {
     width: 100%;
-    height: 73vh;
+    height: 70%;
     border: 2px solid;
     border-color: #05204A;
     border-radius: 10px;
@@ -198,7 +184,7 @@ p {
     overflow-y: auto;
 }
 
-.li {
+#li {
     border: none;
     display: flex;
     flex-direction: row;
@@ -206,12 +192,18 @@ p {
     justify-content: space-between;
 }
 
-.turma_selecionada {
+#icone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#turma_selecionada {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 30vw;
-    height: 70vh;
+    height: 55vh;
     padding: 1% 5%;
     background-color: #F4F4F4;
     border-radius: 20px;
@@ -226,37 +218,50 @@ p {
     margin: 1%;
 }
 
-.turma_selecionada p {
+#turma_selecionada p {
     font-size: 20px;
     font-weight: 400;
 }
 
-.icon.inputIconBg i {
+#icon {
+    position: relative;
+}
+
+#icon i {
+    position: absolute;
+    right: 0%;
+    top: 8%;
+    padding: 9px 8px;
+    color: #808080;
+    transition: 0.3s;
+}
+
+#icon.inputIconBg i {
     background-color: #aaa;
     padding: 9px 4px;
     border-radius: 4px 0 0 4px;
 }
 
-.icon-edit {
+#icon-edit {
     position: relative;
 }
 
-.icon-edit i {
+#icon-edit i {
     position: absolute;
-    right: 1vw;
+    right: 2%;
     top: 45%;
     padding: 9px 8px;
     color: #808080;
     transition: 0.3s;
 }
 
-.icon-edit.inputIconBg i {
+#icon-edit.inputIconBg i {
     background-color: rgb(255, 0, 0);
     padding: 9px 4px;
     border-radius: 4px 0 0 4px;
 }
 
-.selected {
+#selected {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -268,12 +273,16 @@ p {
     justify-content: center;
 }
 
-.selected::-webkit-scrollbar {
+#icone {
+    margin: 0 15% 0 5%;
+}
+
+#selected::-webkit-scrollbar {
     width: 12px;
     /* width of the entire scrollbar */
 }
 
-.selected::-webkit-scrollbar-thumb {
+#selected::-webkit-scrollbar-thumb {
     background-color: #05204A;
     /* color of the scroll thumb */
     border-radius: 10px;
@@ -305,7 +314,7 @@ p {
     height: 100vh;
 }
 
-.terceiro_botao {
+#terceiro_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -346,7 +355,36 @@ p {
     margin-bottom: 1%;
 }
 
-.lab-inp input {
+.modal-editar {
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    width: 100vw;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+
+.modal h1 {
+    font-weight: 700;
+    color: #05204A;
+}
+
+.lab-inp input{
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
@@ -373,7 +411,7 @@ p {
     width: 100%;
 }
 
-.terceiro_botao {
+#primeiro_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -385,7 +423,7 @@ p {
     background-color: #A71E34;
 }
 
-.segundo_botao {
+#segundo_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -397,7 +435,7 @@ p {
     padding: 15px
 }
 
-.primeiro_botao {
+#terceiro_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -407,47 +445,4 @@ p {
     border: none;
     padding: 15px;
     background-color: #c2c2c2;
-}
-
-@media (max-width: 830px) {
-    .space {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .tipo_usuario ul li {
-        list-style: none;
-        width: 30%;
-        height: 50px;
-        text-align: center;
-        padding: 13px 15px;
-        border: 1px solid #C2C2C2;
-        color: #C2C2C2;
-        font-weight: bold;
-        transform: all 0.2s ease;
-        cursor: pointer;
-        text-decoration: none;
-        font-size: 12px;
-    }
-    .ul {
-        width: 100%;
-        height: 10%;
-        border: 2px solid;
-        border-color: #05204A;
-        border-radius: 10px;
-        padding: 5%;
-        overflow-y: auto;
-    }
-    .turma_selecionada {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 90vw;
-        height: 70vh;
-        background-color: #F4F4F4;
-        border-radius: 20px;
-        overflow-y: auto;
-    }
 }
