--- a/instituicao/turmas/style.css
+++ b/instituicao/turmas/style.css
@@ -406,10 +406,15 @@ ul {
     font-weight: 400;
 }
 
-.nome img{
+.tipo img{
     width: 25px;
     margin-left: 0.5vw;
     margin-top: -1.5vh;
+}
+
+.tipo{
+    display: flex;
+    flex-direction: column;
 }
 
 .primeiro_botao {
@@ -446,6 +451,19 @@ ul {
     border: none;
     padding: 15px;
 }
+
+.quinto_botao {
+    width: 100%;
+    font-size: 13px;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #044177;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px;
+}
+
 
 .quarto_botao {
     margin-top: 2vh;
