--- a/professor/perfil/perfil.css
+++ b/professor/perfil/perfil.css
@@ -33,14 +33,15 @@ body {
     justify-content: space-around;
 }
 
-.container .profile-image {
-    width: 100px;
-    height: 100px;
+.container .profile_image {
+    width: 150px;
+    height: 150px;
     border-radius: 100px;
      margin-bottom: 10px;
 }
 
 .container .profile-pic-div {
+    display: flex;
     justify-content: center;
 }
 
@@ -212,5 +213,10 @@ button {
 
     .container h1 {
         font-size: 50px;
+    }
+
+    .container .profile_image {
+        width: 100px;
+        height: 100px;
     }
 }
