--- a/professor/perfil/editar/editar_perfil.css
+++ b/professor/perfil/editar/editar_perfil.css
@@ -7,6 +7,7 @@
 .container h1 {
     font-size: 70px;
     display: flex;
+    font-weight: 700;
     flex-direction: column;
     align-items: center;
     color: #05204A;
@@ -131,6 +132,11 @@ a:hover {
     border: #05204A;
 }
 
+#space{
+    width:90%;
+    margin-left: 0 20% 0 10%;
+    padding: 50px;
+}
 #icon input {
     padding-right: 50px;
 }
@@ -163,5 +169,9 @@ a:hover {
     .container .profile_image {
         width: 100px;
         height: 100px;
+    }
+
+    #space{
+        width:70%;
     }
 }
