--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -101,7 +101,7 @@ ul::-webkit-scrollbar-thumb {
   }
   
   .select2.select2-container .select2-selection--multiple {
-    height: auto;
+    height: 90%;
     min-height: 34px;
   }
   
@@ -122,7 +122,7 @@ ul::-webkit-scrollbar-thumb {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    margin: 4px 4px 0 0;
+    margin: 4px 4px 0 4px;
     padding: 2% 1% 2% 0px;
     height: 24px;
     line-height: 24px;
