--- a/professor/componentes/header/styles_header.css
+++ b/professor/componentes/header/styles_header.css
@@ -10,10 +10,12 @@
 }
 
 header{
+    font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: space-between;
     padding: 30px 70px;
     color: hsl(208, 93%, 24%);
+    margin-left: 75px;
 }
 
 header .primeira_parte{
@@ -24,7 +26,7 @@ header .primeira_parte{
 }
 
 header h1{
-    font-size: 24px;
+    font-size: 23px;
 }
 
 .icone_perfil {
@@ -49,7 +51,11 @@ header h1{
 @media (max-width: 992px) {
 
     header {
-        padding: 30px 30px;
+        margin-left: 60px;
+    }
+
+    header h1 {
+        font-size: 20px;
     }
 
     .icone_perfil {
@@ -65,7 +71,9 @@ header h1{
     }
 
     header {
-        padding: 10px;
+        padding: 0px;
+        margin-top: 30px;
+        margin-right: 15px;
         justify-content: end;
     }
 
