--- a/professor/cursos/cursos.css
+++ b/professor/cursos/cursos.css
@@ -7,6 +7,7 @@
 .container-geral {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 body {
@@ -135,14 +136,16 @@ ul::-webkit-scrollbar-thumb {
     padding: 15px;
 }
 
-@media (max-width: 700px) {
-    
+
+@media (max-width: 1550px) {
+
     .container-geral {
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
+        /* width: 80vw; */
+        margin-left: 8vw;
     }
+} 
+
+@media (max-width: 818px) {
 
     .book {
         display: none;
@@ -161,6 +164,15 @@ ul::-webkit-scrollbar-thumb {
         display: flex;
         flex-direction: row;
         align-items: center;
+    }
+
+    .container-geral button {
+        width: 200px;
+        height: 70px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        display: flex;
     }
 
 }
