--- a/aluno/perfil/style.css
+++ b/aluno/perfil/style.css
@@ -50,6 +50,12 @@ body {
    border: none;
    padding: 15px
 }
+input {
+   background-color: #E3E3E3;
+   border-radius: 10px;
+   border-bottom: 1px solid #05204A;
+   padding: 15px
+}
 
 .buttons {
    display: flex;
