--- a/aluno/projeto_tcc/editar/style.css
+++ b/aluno/projeto_tcc/editar/style.css
@@ -12,6 +12,7 @@ body {
    flex-direction: column;
    justify-content: center;
    position: relative;
+   cursor: pointer;
 }
 
 .filterForm{ 
@@ -24,7 +25,7 @@ body {
 .filterForm input{ 
    background-color: #E3E3E3;
    border-radius: 10px;
-   border-bottom: 1px solid #05204A;
+   border: 1px solid #05204A;
    padding: 15px;
 }
 
@@ -36,7 +37,6 @@ body {
    width: 100%;
    display: flex;
    flex-direction: column;
-   align-items: center;
 }
 
 .lab-inp{
@@ -49,9 +49,40 @@ body {
    flex-direction: column;
 }
 
-.primeiro_botao {
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+   font-size: 15px;
    width: 100%;
-   font-size: 13px;
+   background-color: rgba(240, 248, 255, 0);
+   color: rgb(255, 255, 255);
+   background-color: #044177;
+   border-radius: 10px;
+   font-weight: 300;
+   border: none;
+   padding: 10px;
+   margin-bottom: 5%;
+   text-align: center;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: red;
+}
+
+.inputfile + label {
+	cursor: pointer; /* "hand" cursor */
+}
+.primeiro_botao {
+   width: 98%;
+   font-size: 15px;
    background-color: rgba(240, 248, 255, 0);
    color: white;
    background-color: #044177;
@@ -63,8 +94,8 @@ body {
 }
 
 .segundo_botao {
-   width: 98%;
-   font-size: 13px;
+   width: 100%;
+   font-size: 15px;
    background-color: rgba(240, 248, 255, 0);
    color: white;
    background-color: #c2c2c2c2;
@@ -77,7 +108,7 @@ body {
 
 .terceiro_botao{
    font-size: 15px;
-   width: 20%;
+   width: 50%;
    background-color: rgba(240, 248, 255, 0);
    color: rgb(255, 255, 255);
    background-color: #044177;
