--- a/professor/usuarios/style.css
+++ b/professor/usuarios/style.css
@@ -5,18 +5,17 @@
 }
 
 .space {
-    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     align-items: center;
     margin-top: 2%;
-    width: 100vh;
+    width: 100%;
 }
 
 .container-geral {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100vw;
 }
 
@@ -63,6 +62,15 @@
     border: none;
     /* creates padding around scroll thumb */
 }
+.sidebar .logo-details .icone_empresa {
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+
+.sidebar.open .logo-details .icone_empresa {
+    opacity: 1;
+}
+
 
 .modal-excluir input {
     background-color: #E3E3E3;
@@ -332,7 +340,7 @@ p {
 
 .ul {
     width: 100%;
-    height: 73vh;
+    height: 70vh;
     border: 2px solid;
     border-color: #05204A;
     border-radius: 10px;
