--- a/professor/cursos/turmas/turmas.css
+++ b/professor/cursos/turmas/turmas.css
@@ -92,7 +92,7 @@ ul::-webkit-scrollbar-thumb {
     border: none;
 }
 
-#modal-turma, #modal-membros {
+#modal-turma, #modal-membros, #modal-grupos {
     width: 100%;
     height: 50vh;
     background-color: rgb(255, 255, 255);
@@ -108,6 +108,14 @@ ul::-webkit-scrollbar-thumb {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+#modal-turma {
+    height: 40vh;
+}
+
+.g-7 input {
+    width: 100%;
 }
 
 .participantes {
@@ -231,6 +239,9 @@ ul::-webkit-scrollbar-thumb {
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .ul-membro {
@@ -266,7 +277,7 @@ ul::-webkit-scrollbar-thumb {
 
 .container-cadastro-membro .buttons {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
 }
 
 .ul-aluno {
@@ -278,7 +289,11 @@ ul::-webkit-scrollbar-thumb {
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    align-items: center;
 }
+
 .ul-grupo {
     margin: 1% 0;
     width: 100%;
@@ -325,6 +340,8 @@ ul::-webkit-scrollbar-thumb {
     flex-direction: column;
     align-items: center;
     margin: 1%;
+    gap: 2%;
+    padding: 5% 0;
 }
 
 .grupo {
@@ -459,7 +476,21 @@ ul::-webkit-scrollbar-thumb {
 
 .membro-container {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
+
+.professores, .alunos {
+    width: 50%;
+}
+
+.list-group-item {
+    display: flex;
+    justify-content: center;
+} 
+
+.membro-container img {
+    margin-left: 25%;
 }
 
 .buttons {
@@ -573,9 +604,6 @@ ul::-webkit-scrollbar-thumb {
     font-size: 50px;
 }
 
-.container button{
- 
-}
 .button5 {
     color: white;
     position: static;
