--- a/home/style.css
+++ b/home/style.css
@@ -7,7 +7,7 @@
  body{
     width: 100vw;
     height: 100vh;
-    background: url('background.svg');
+    background: url('./images-global/background.svg');
     background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.452);
     background-position: center center;
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    cursor: default;
  }
 
  main{
@@ -73,6 +74,7 @@
 
  main .botao:hover{
       box-shadow: 0 0 10px 0 #0987F7 inset, 0 0 10px 4px #0987F7;
+      cursor: pointer;
  }
 
  @media (max-width: 1200px) {
