--- a/professor/cursos/turmas/turmas.css
+++ b/professor/cursos/turmas/turmas.css
@@ -92,7 +92,7 @@ ul::-webkit-scrollbar-thumb {
     border: none;
 }
 
-#modal-turma, #modal-membros, #modal-grupos {
+#modal-turma, #modal-membros, #modal-grupos, #modal-criar-grupo, #modal-excluir-grupo{
     width: 100%;
     height: 50vh;
     background-color: rgb(255, 255, 255);
@@ -108,6 +108,13 @@ ul::-webkit-scrollbar-thumb {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+#modal-excluir-grupo {
+    width: 40%;
+    height: 30vh;
+    align-items: center;
+    font-weight: 100;
 }
 
 #modal-turma {
@@ -196,7 +203,7 @@ ul::-webkit-scrollbar-thumb {
 
 .bg {
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
     width: 100%;
     height: 100%;
     display: none;
@@ -252,6 +259,24 @@ ul::-webkit-scrollbar-thumb {
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
+}
+
+.grupo a {
+    text-decoration: none;
+    text-align: center;
+    color: #212529;
+}
+
+.grupo a:hover {
+    color: #212529;
+}
+
+.btnExcluirGrupo{
+    border: none;
+    background: none;
+    align-self: flex-end;
+    font-size: x-large;
+    margin-right: 5px;
 }
 
 .container-selecionando h1 {
